# genmap

./: CMakeLists.txt  Makefile  README.md
inc/: CMakeLists.txt  comm.h  csr.h  dtypes.h  eig.h  genmap-fortran-name.h  genmap-impl.h  genmap-io.h  genmap-vector.h  genmap.h  gslib.h  gswrapper.h  inv_power.h  io.h  lanczos.h  laplacian.h  linalg.h  mpiwrapper.h  random.h  rsb.h  test.h  tqli.h
inc/io/: genmap-default.h  genmap-fortran.h  genmap-gmsh.h
io/: CMakeLists.txt  genmap-io.h
io/default/: CMakeLists.txt
io/fortran/: CMakeLists.txt  genmap-fortran.c
io/gmsh/: CMakeLists.txt  genmap-gmsh.c  genmap-gmsh.h
readers/: default.h  genmap-readers.h
readers/default/: default-comm.c  default-io.c  default.c  default.h  genmap-default-comm.c  genmap-default-io.c  genmap-default-reader.h  genmap-default.c
readers/fortran/: genmap-fortran-comm.c  genmap-fortran-io.c  genmap-fortran-reader.h  genmap-fortran.c
src/: CMakeLists.txt  csr.c  genmap-algo.c  genmap-comm.c  genmap-fortran.c  genmap-handle.c  genmap-io.c  genmap-vector.c  genmap.c  gswrapper.c  inv_power.c  io.c  lanczos.c  laplacian.c  linalg.c  mpiwrapper.c  power.c  rsb.c  test.c  tqli.c
src/io/: genmap-default.c  genmap-fortran.c
tests/: algo-test.c  algo_test.c  ax-test.c  ax.c  comm-test.c  csr_test.c  default-io-test.c  fiedler-test.c  fiedler1-test.c  fortran-test.f  genmap-test.c  gmsh-io-test.c  gmsh-io1-test.c  gmsh-io2-test.c  gmsh-io3-test.c  gop_test.c  gs_test.c  io-test.c  lanczos-test.c  lanczos.c  lanczos_parallel.c  lanczos_parallel_test.c  lanczos_serial_test.c  lanczos_test.c  laplacian_test.c  mpiio_test.c  power_test.c  readmap_test.c  rsb-test.c  rsb1_test.c  rsb_test.c  run-serial-tests.sh  run-tests.sh  symtridiag_solve_test.c  test_ax.c  test_lanczos.c  test_vector.c  text2bin.py  vector-test.c  vector.c  (+1 more)
tests/mesh/: box2D_2  lanczos.ipynb  nbrhd.usr  nbrhd4.usr
tests/nbrhd/: SIZE  b2d.box  lanczos.ipynb  nbrhd.map  nbrhd.rea  nbrhd.usr  nbrhd4.map  nbrhd4.rea
